# lightcode

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: main.ts  workerSetupEntry.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
