[package]
name = "lightcode-v2"
version = "0.0.1"
edition = "2021"
description = "Lightcode v2 — Tauri shell"
authors = ["dlsdud9098"]
license = "MIT"

[lib]
name = "lightcode_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "s"
